<resources>
    <string name="app_name">diabetes insulin therapy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="ratio_matin">Ratio</string>
    <string name="sencibilit_resucrage">sencibilité resucrage</string>
    <string name="objectife_glecymeque">objectife Glecymeque</string>
    <string name="sencibilit_apr_s_midi">sencibilité Aprés-midi</string>
    <string name="sencibilit_matin">sencibilité Matin</string>
    <string name="ratio_soir">Ratio soir</string>
    <string name="ratio_midi">Ratio Midi</string>
    <string name="_a">à</string>

</resources>

